Fixed controls z-index #24

--- a/src/slider-metalamp/slider-metalamp.scss
+++ b/src/slider-metalamp/slider-metalamp.scss
@@ -106,6 +106,7 @@
     width: 1px;
     height: 1px;
     position: absolute;
+    z-index: 30;
     align-self: center;
     display: flex;
     justify-content: center;
